fixed: chat overflow

--- a/Frontend/src/app/components/messages/message-input/message-input.component.css
+++ b/Frontend/src/app/components/messages/message-input/message-input.component.css
@@ -1,5 +1,7 @@
 :host {
   flex-shrink: 0;
+  position: relative;
+  z-index: 1;
 }
 
 .message-input-wrapper {
